# ESA-PROJ

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  frames.gv  readme.md  setup.bash
esa_proj/: CMakeLists.txt  package.xml
esa_proj/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
esa_proj/devel/include/pr2_msgs/: AccelerometerState.h  AccessPoint.h  BatteryServer.h  BatteryServer2.h  BatteryState.h  BatteryState2.h  DashboardState.h  GPUStatus.h  LaserScannerSignal.h  LaserTrajCmd.h  PeriodicCmd.h  PowerBoardState.h  PowerState.h  PressureState.h  SetLaserTrajCmd.h  SetLaserTrajCmdRequest.h  SetLaserTrajCmdResponse.h  SetPeriodicCmd.h  SetPeriodicCmdRequest.h  SetPeriodicCmdResponse.h
esa_proj/devel/share/convex_decomposition/cmake/: convex_decompositionConfig.cmake
esa_proj/devel/share/faw/cmake/: fawConfig.cmake
esa_proj/devel/share/fontys_at_work/cmake/: fontys_at_workConfig.cmake
esa_proj/devel/share/fontys_at_work2/cmake/: fontys_at_work2Config.cmake
esa_proj/devel/share/ivcon/cmake/: ivconConfig.cmake
esa_proj/devel/share/pr2_dashboard_aggregator/cmake/: pr2_dashboard_aggregatorConfig.cmake
esa_proj/devel/share/pr2_description/cmake/: pr2_descriptionConfig.cmake
esa_proj/devel/share/pr2_machine/cmake/: pr2_machineConfig.cmake
esa_proj/devel/share/pr2_msgs/cmake/: pr2_msgs-msg-extras.cmake  pr2_msgs-msg-paths.cmake  pr2_msgsConfig.cmake
esa_proj/devel/share/test/cmake/: testConfig.cmake
esa_proj/devel/share/youbot_description/cmake/: youbot_descriptionConfig.cmake
esa_proj/devel/share/youbot_driver/cmake/: youbot_driverConfig.cmake
esa_proj/devel/share/youbot_driver_ros_interface/cmake/: youbot_driver_ros_interfaceConfig.cmake
esa_proj/devel/share/youbot_launch/cmake/: youbot_launchConfig.cmake
esa_proj/devel/share/youbot_moveit_config/cmake/: youbot_moveit_configConfig.cmake
esa_proj/devel/share/youbot_navigation_common/cmake/: youbot_navigation_commonConfig.cmake
esa_proj/devel/share/youbot_navigation_global/cmake/: youbot_navigation_globalConfig.cmake
esa_proj/devel/share/youbot_navigation_local/cmake/: youbot_navigation_localConfig.cmake
esa_proj/src/youbot/cancel_goal/src/: cancel_goal.cpp
esa_proj/src/youbot/faw/: package.xml
esa_proj/src/youbot/faw/config/: ps3.config.yaml
esa_proj/src/youbot/faw/launch/: base_nav.launch  map_create.launch  nav_only.launch
esa_proj/src/youbot/faw/map/: test2.pgm  test2.yaml
esa_proj/src/youbot/faw/templates/: base_nav.template  build_launch.sh  map_create.template  nav_only.template  params.sh
esa_proj/src/youbot/youbot_description/robots/: youbot.urdf.xacro
esa_proj/src/youbot/youbot_launch/: CMakeLists.txt
esa_proj/src/youbot/youbot_launch/map/: test2.yaml
esa_proj/src/youbot/youbot_moveit_config/: CMakeLists.txt  move2.py
fontys_at_work/refbox_receiver/: CMakeLists.txt  package.xml
fontys_at_work/refbox_receiver/include/refbox_receiver/: refbox_receiver.hpp
fontys_at_work/refbox_receiver/src/: refbox_receiver.cpp  refbox_receiver_node.cpp
fontys_at_work/rosdep_deps/: CMakeLists.txt  package.xml
maps/: map_nogo.pgm  (+7 more)
src/faw_vision/: CMakeLists.txt  package.xml
src/faw_vision/camera_depth/: CMakeLists.txt  main.cpp
src/faw_vision/launch/: vision.launch
src/faw_vision/src/: broadcast_tf.cpp
src/fontys_at_work/actionserver_tutorial/: CMakeLists.txt  package.xml
src/fontys_at_work/actionserver_tutorial/src/: LocationIdentifier.cpp  ObjectIdentifier.cpp  fibonacci_client.cpp  fibonacci_server.cpp
src/fontys_at_work/keepout_map_server/: CMakeLists.txt  package.xml
src/fontys_at_work/keepout_map_server/include/: map.hpp  map_functions.hpp
src/fontys_at_work/keepout_map_server/launch/: keepout_server.launch
src/fontys_at_work/keepout_map_server/msg/: Square.msg
src/fontys_at_work/keepout_map_server/src/: keepout_map_server.cpp  map.cpp
src/fontys_at_work/keepout_map_server_msg/: CMakeLists.txt  package.xml
src/fontys_at_work/keepout_map_server_msg/msg/: Line.msg
src/fontys_at_work/map_marker/: CMakeLists.txt  package.xml
src/fontys_at_work/map_marker/launch/: map_complete.launch
src/fontys_at_work/map_marker/src/: ClickableLabel.cpp  MainWindow.cpp  MapRenderer.cpp  Marker.cpp  NoGoLine.cpp  Qnode.cpp  YamlWriter.cpp  main.cpp
src/fontys_at_work/map_marker/ui/: MainWindow.ui
src/fontys_at_work/nav_lib/: CMakeLists.txt  package.xml
src/fontys_at_work/nav_lib/src/: Marker.cpp  Nav.cpp  NoGoLine.cpp  YamlParser.cpp
src/fontys_at_work/nogo_zone_map_server/: CMakeLists.txt  package.xml
src/fontys_at_work/nogo_zone_map_server/launch/: keepout_server.launch
src/fontys_at_work/nogo_zone_map_server/src/: map.cpp  nogo_zone_map_server.cpp
src/fontys_at_work/nogo_zone_map_server_msg/: CMakeLists.txt
src/fontys_at_work/task_executor/: CMakeLists.txt  package.xml
src/fontys_at_work/task_executor/action/: Task.action
src/fontys_at_work/task_executor/src/: LocationIdentifier.cpp  ObjectIdentifier.cpp  task_executor.cpp
src/fontys_at_work/task_handler/: CMakeLists.txt  package.xml
src/fontys_at_work/task_handler/include/: lege.file.exe.bat.mp4.mp3.rar
src/fontys_at_work/task_handler/launch/: task_handler.launch
src/fontys_at_work/task_handler/src/: LocationIdentifier.cpp  ObjectIdentifier.cpp  task_handler.cpp
src/map_marker/: CMakeLists.txt  CMakeLists_kinetic.txt  connectwindow.cpp  connectwindow.hpp  connectwindow.ui  package.xml
src/map_marker/include/MapMarker/: MainWindow.hpp  NoGoLine.hpp  Qnode.hpp  YamlParser.hpp
src/map_marker/include/map_marker/: ClickableLabel.hpp  MapConfig.hpp  Marker.hpp  Yaml.hpp  YamlParser.hpp  YamlWriter.hpp  main_window.hpp  main_window_kinetic.hxx  qnode.hpp
src/map_marker/src/: ClickableLabel.cpp  MainWindow.cpp  MapConfig.cpp  Marker.cpp  Qnode.cpp  Yaml.cpp  YamlParser.cpp  YamlWriter.cpp  main.cpp  main_window.cpp  qnode.cpp
src/map_marker/ui/: ConnectWindow.ui.bak  MainWindow.ui  main_window.ui
src/vision/: .gitignore  CMakeLists.txt  main.cpp
src/youbot_fontys/atwork_refbox_ros_client/: CMakeLists.txt  README.md  package.xml  robot_example_ros_backup.cpp
(+238 files in other folders)
