<?xml version="1.0"?>
<package format="2">
  <name>esa_proj</name>
  <version>0.0.1</version>
  <description>Fontys@Work ROS</description>

  <license>???</license>

  <author>M. Diep</author>
  <author>H. Heijnen</author>
  <author>L. Jaeqx</author>
  <author>L. van Rossum</author>
  <author>W. Sneijers</author>
  <author>J. van Weger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
