<?xml version="1.0"?>
<package format="2">
  <name>keepout_map_server</name>
  <version>0.0.0</version>
  <description>The keepout_map_server package</description>
  <maintainer email="viki@todo.todo">viki</maintainer>
  <author>viki</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/minhtrietdiep/ESA-PROJ/issues</url>
  <url type="repository">https://github.com/minhtrietdiep/ESA-PROJ</url>
  <url type="wiki">https://github.com/minhtrietdiep/ESA-PROJ/wiki</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>keepout_map_server_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>keepout_map_server_msg</exec_depend>
</package>