<?xml version="1.0"?>
<package>
  <name>map_marker</name>
  <version>0.1.0</version>
  <description>map_marker</description>
  <maintainer email="viki@gmail.com">viki</maintainer>
  <author>viki</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/minhtrietdiep/ESA-PROJ/issues</url>
  <url type="repository">https://github.com/minhtrietdiep/ESA-PROJ</url>
  <url type="wiki">https://github.com/minhtrietdiep/ESA-PROJ/wiki</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>keepout_map_server</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>keepout_map_server</run_depend>

 
</package>
