<?xml version="1.0"?>
<package format="2">
  <name>task_handler</name>
  <version>0.0.0</version>
  <description>The task_handler package</description>
  <maintainer email="viki@todo.todo">viki</maintainer>
  <author>viki</author>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/minhtrietdiep/ESA-PROJ/issues</url>
  <url type="repository">https://github.com/minhtrietdiep/ESA-PROJ</url>
  <url type="wiki">https://github.com/minhtrietdiep/ESA-PROJ/wiki</url>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <build_depend>actionserver_tutorial</build_depend>
  
  
  <exec_depend>roscpp</exec_depend>
  
  <exec_depend>actionserver_tutorial</exec_depend>
  
</package>